[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/shield_gold.png" type="Texture" id=3]
[ext_resource path="res://assets/glassPanel_200.png" type="Texture" id=4]
[ext_resource path="res://assets/barHorizontal_green_mid 200.png" type="Texture" id=5]
[ext_resource path="res://assets/player_small.png" type="Texture" id=6]
[ext_resource path="res://assets/play_button.png" type="Texture" id=7]
[ext_resource path="res://assets/play_button_h.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 92.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 410.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 444.0
margin_bottom = 72.0
texture = ExtResource( 3 )

[node name="ShieldBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 858.0
margin_bottom = 72.0
size_flags_horizontal = 3
value = 75.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 862.0
margin_right = 984.0
margin_bottom = 72.0

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_right = 38.0
margin_bottom = 72.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 72.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 84.0
margin_right = 122.0
margin_bottom = 72.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -32.5
margin_right = 124.5
margin_bottom = 32.5
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LblCopyright" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
text = "Copyright 2020 AxSoft"
align = 2

[node name="TweenLabel" type="Tween" parent="."]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
